--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "express": "^4.21.2",
     "mysql2": "^3.14.2",
     "sequelize": "^6.37.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
