--- a/MIgrations/package.json
+++ b/MIgrations/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Sequelize",
+  "name": "MIgrations",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,14 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
-    "express": "^4.21.2"
-  },
   "devDependencies": {
     "mysql2": "^3.14.3",
-    "nodemon": "^3.1.10",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3"
   }
